# libnyoci

./: .default-version  .gitignore  .travis.yml  CONTRIBUTING.md  HACKING.md  LICENSE  Makefile.am  Makefile.in  NEWS.md  README.md  aclocal.m4  bootstrap.sh  configure  configure.ac  doxygen.cfg.in  git-update-bootstrap-tags
.travis/: after_success.sh  before_install.sh  before_script.sh  deploy.prv.enc  script.sh
Xcode/macOS/: config.h  nyoci-config.h
Xcode/nyoci.xcodeproj/: project.pbxproj
contiki-src/: Makefile.nyoci  led-node.c  led-node.h  nyoci-contiki-config.h  nyoci-task.c  nyoci-task.h  sensor-node.c  sensor-node.h
contiki-src/examples/nyoci-complex/: Makefile  nyoci-complex.c
contiki-src/examples/nyoci-plugtest/: Makefile  nyoci-plugtest.avr-raven.gdb  nyoci-plugtest.c
contiki-src/examples/nyoci-simple/: Makefile  nyoci-simple.c
doc/: Makefile.am  Makefile.in  nyocictl.1  oss-plan.md
etc/: build-in-docker.sh  libnyoci.rb  run-in-docker.sh  smcp-to-libnyoci.sed
m4/: libtool.m4
src/: Makefile.am  Makefile.in  config.h.in  version.h
src/examples/: .gitignore  Makefile.am  Makefile.in  example-1.c  example-2.c  example-3.c  example-4.c  example-multicast-request.c
src/libnyoci/: Makefile.am  Makefile.in  assert-macros.h  btree.c  btree.h  coap.c  coap.h  fasthash.c  fasthash.h  libnyoci.h  libnyoci.pc.in  ll.h  nyoci-async.c  nyoci-async.h  nyoci-config.h.in  nyoci-defaults.h  nyoci-dupe.c  nyoci-dupe.h  nyoci-helpers.h  nyoci-inbound.c  nyoci-internal.h  nyoci-logging.h  nyoci-missing.c  nyoci-missing.h  nyoci-observable.c  nyoci-observable.h  nyoci-opts.h  nyoci-outbound.c  nyoci-plat-net-func.h  nyoci-plat-tls-func.h  nyoci-session.c  nyoci-session.h  nyoci-status.h  nyoci-timer.c  nyoci-timer.h  nyoci-transaction.c  nyoci-transaction.h  nyoci.c  string-utils.c  string-utils.h  (+2 more)
src/libnyociextra/: Makefile.am  Makefile.in  libnyociextra.h  libnyociextra.pc.in  nyoci-list.c  nyoci-node-router.c  nyoci-node-router.h  nyoci-var-handler.c  nyoci-var-handler.h
src/missing/: Makefile.am  Makefile.in  fgetln.h  getline.c
src/missing/strlcat/: Makefile.in
src/missing/strlcpy/: Makefile.in
src/nyocictl/: Makefile.am  Makefile.in  cmd_delete.c  cmd_delete.h  cmd_get.c  cmd_get.h  cmd_list.c  cmd_list.h  cmd_post.c  cmd_post.h  cmd_repeat.c  cmd_repeat.h  help.c  help.h  main.c  nyocictl.h
src/plat-net/posix/: Makefile.am  Makefile.in  nyoci-plat-net-internal.h  nyoci-plat-net.c  nyoci-plat-net.h
src/plat-net/uip/: Makefile.am  Makefile.in  nyoci-plat-net-internal.h  nyoci-plat-net.c  nyoci-plat-net.h
src/plat-tls/openssl/: Makefile.am  Makefile.in  nyoci-plat-tls.c  nyoci-plat-tls.h
src/plugtest/: Makefile.am  Makefile.in  README.md  main-client.c  main-server.c  plugtest-server.c  plugtest-server.h  selftest.sh
src/tests/: Makefile.am  Makefile.in  test-concurrency.c  test-issue-21.c
